fixed nav-menu width shift

--- a/src/constructor.blocks/button/button.scss
+++ b/src/constructor.blocks/button/button.scss
@@ -1,6 +1,6 @@
 .button {
 
-    display: inline-flex;
+    // display: inline-flex;
     position: relative;
     white-space: nowrap;
     text-decoration: none;
