--- a/src/constructor.blocks/header/header.scss
+++ b/src/constructor.blocks/header/header.scss
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     flex-wrap: wrap;
-
+    justify-content: center;
     font-size: var(--text-base-size);
     // padding: var(--space-md);
 }
