--- a/src/constructor.blocks/nav-menu/__list/nav-menu__list.scss
+++ b/src/constructor.blocks/nav-menu/__list/nav-menu__list.scss
@@ -1,9 +1,14 @@
 .nav-menu__list {
 
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style-type: none;
+    flex-flow: row wrap;
+    justify-content: space-around;
     white-space: nowrap;
+
+    // ::before {
+    //     content: '';
+    //     font-weight: bold;
+    //     opacity: 0.2;
+    // }
 
 }
