--- a/src/constructor.blocks/section/section.scss
+++ b/src/constructor.blocks/section/section.scss
@@ -1,4 +1,9 @@
 .section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
 
     margin: var(--space-lg);
     padding: var(--space-lg);
